Fix: borrado de métodos e imports residuales